<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/ivcat_name"
            style="@style/AccCat.TextView.Scrollable"
            app:layout_constraintEnd_toStartOf="@+id/ivcat_edit"
            app:selected="@{true}"
            tools:text="Category Name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ivcat_edit"
            style="@style/AccCat.Button.IconOnly"
            app:icon="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toStartOf="@+id/ivcat_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ivcat_delete"
            style="@style/AccCat.Button.IconOnly"
            android:enabled="false"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>