...
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alert_dialog_input_hint"
            android:inputType="text"
            android:maxLength="32" />
    </com.google.android.material.textfield.TextInputLayout>
...
