...
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
...
            android:theme="@style/AppBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/account_topBar"
                style="@style/ToolBar"
                app:menu="@menu/account_menu"
                app:navigationContentDescription="@string/navigate_back"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/accounts" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
