...
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/cfl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
...
            android:theme="@style/AppBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/cfl_topBar"
                style="@style/ToolBar"
                app:menu="@menu/cfl_menu"
                app:navigationContentDescription="@string/cfl_drawer_description"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="@string/cfl_overview" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/cfl_constraint"
...
